--- a/fast-food.html
+++ b/fast-food.html
@@ -32,5 +32,30 @@
         </section>
     </header>
 
+    <div class="heading">
+        <h3>Fast Foods</h3>
+        <p><a href="index.html">Home</a><span> / Fast Foods</span></p>
+    </div>
+
+    <section class="products">
+        <div class="box-container">
+            <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/chicken cheese.png" alt="">
+                <a href="category.html" class="cat">Fast Food</a>
+                <div class="name">Chicken Cheese Pizza</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>199<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="credit">Made with ❤️ by <span>ashish k, jolin, ashish & shinoy.</span> </div>
+    </footer>
+
 </body>
 </html>
