--- a/fast-food.html
+++ b/fast-food.html
@@ -43,13 +43,74 @@
                 <a href="quick_view.html" class="fas fa-eye"></a>
                 <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
                 <img src="assets/images/chicken cheese.png" alt="">
-                <a href="category.html" class="cat">Fast Food</a>
+                <a href="index.html" class="cat">Fast Food</a>
                 <div class="name">Chicken Cheese Pizza</div>
                 <div class="flex">
                    <div class="price"><span>₹</span>199<span>/-</span></div>
                    <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
                 </div>
              </form>
+
+             <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/veg pizza.png" alt="">
+                <a href="index.html" class="cat">Fast Food</a>
+                <div class="name">Veg Mushroom Pizza</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>80<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+
+             <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/cheese pizza.png" alt="">
+                <a href="index.html" class="cat">Fast Food</a>
+                <div class="name">Cheese Pizza</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>170<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+
+             <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/chicken dominator.png" alt="">
+                <a href="index.html" class="cat">Fast Food</a>
+                <div class="name">Chicken Dominator Pizza</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>299<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+
+             <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/chicken cheese burger.png" alt="">
+                <a href="index.html" class="cat">Fast Food</a>
+                <div class="name">Chicken Cheese Burger</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>119<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+
+             <form accept="" method="post" class="box">
+                <a href="quick_view.html" class="fas fa-eye"></a>
+                <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
+                <img src="assets/images/double chicken.png" alt="">
+                <a href="index.html" class="cat">Fast Food</a>
+                <div class="name">Double Chicken Burger</div>
+                <div class="flex">
+                   <div class="price"><span>₹</span>169<span>/-</span></div>
+                   <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
+                </div>
+             </form>
+
         </div>
     </section>
 
