--- a/fast-food.html
+++ b/fast-food.html
@@ -115,7 +115,7 @@
     </section>
 
     <footer class="footer">
-        <div class="credit">Made with ❤️ by <span>ashish k, jolin, ashish & shinoy.</span> </div>
+        <div class="credit">Made with ❤️ by <span> 🐱 </span> </div>
     </footer>
 
 </body>
