--- a/category.html
+++ b/category.html
@@ -35,22 +35,25 @@
         </section>
     </header>
 
-    <div class="heading">
-        <h2>Welcome To Foody🍔</h2>
-        <p><a href="index.html">Home</a></p>
-    </div>
-
-    <section class="products">
+    <section class="category">
+        <h1 class="title">Food Category</h1>
         <div class="box-container">
-            <form accept="" method="post" class="box">
-                <a><img src="assets/icons/admin.png" alt=""></a>
-                <div class="name" style="text-align: center;">Admin</div>
-            </form>
-
-            <form accept="" method="post" class="box">
-                <a><img src="assets/icons/users.png" alt=""></a>
-                <div class="name" style="text-align: center;">User</div>
-            </form>
+            <a href="fast-food.html" class="box">
+                <img src="assets/images/fast food.png" alt="">
+                <h3>Fast Food</h3>
+            </a>
+            <a href="main-dishes.html" class="box">
+                <img src="assets/images/main dish.png" alt="">
+                <h3>Main Dishes</h3>
+            </a>
+            <a href="drinks.html" class="box">
+                <img src="assets/images/drinks.png" alt="">
+                <h3>Drinks</h3>
+            </a>
+            <a href="desserts.html" class="box">
+                <img src="assets/images/ice-cream.png" alt="">
+                <h3>Desserts</h3>
+            </a>
         </div>
     </section>
 
