--- a/main-dishes.html
+++ b/main-dishes.html
@@ -36,7 +36,7 @@
 
     <div class="heading">
         <h3>Main Dishes</h3>
-        <p><a href="index.html">Home</a><span> / Main Dishes</span></p>
+        <p><a href="index.html">Home / </a><span>Main Dishes</span></p>
     </div>
 
     <section class="products">
@@ -121,10 +121,6 @@
 
         </div>
     </section>
-
-    <footer class="footer">
-        <div class="credit">Made with ❤️ by <span> 🐱 </span> </div>
-    </footer>
 
 </body>
 
