--- a/fast-food.html
+++ b/fast-food.html
@@ -34,7 +34,7 @@
 
     <div class="heading">
         <h3>Fast Foods</h3>
-        <p><a href="index.html">Home</a><span> / Fast Foods</span></p>
+        <p><a href="index.html">Home / </a><span>Fast Foods</span></p>
     </div>
 
     <section class="products">
@@ -113,10 +113,6 @@
 
         </div>
     </section>
-
-    <footer class="footer">
-        <div class="credit">Made with ❤️ by <span> 🐱 </span> </div>
-    </footer>
 
 </body>
 </html>
