--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Foody🍔</title>
 </head>
-
 <body>
-
     <header class="header">
         <section class="flex">
             <a href="index.html" id="home" class="logo">Foody🍔</a>
@@ -31,27 +28,30 @@
     </header>
 
     <section class="category">
-        <h1 class="title">Food Category</h1>
+        <h1 class="title">Restaurant</h1>
         <div class="box-container">
             <a href="fast-food.html" class="box">
-                <img src="assets/icons/fast food.png" alt="">
-                <h3>Fast Food</h3>
+                <img src="assets/icons/burger.png" alt="">
+                <h3>Foody Buddy</h3>
             </a>
             <a href="main-dishes.html" class="box">
-                <img src="assets/icons/main dish.png" alt="">
-                <h3>Main Dishes</h3>
+                <img src="assets/icons/biryani.png" alt="">
+                <h3>Biryani Zone</h3>
             </a>
             <a href="drinks.html" class="box">
-                <img src="assets/icons/drinks.png" alt="">
-                <h3>Drinks</h3>
+                <img src="assets/icons/roti.png" alt="">
+                <h3>JM Restaurant</h3>
             </a>
             <a href="desserts.html" class="box">
-                <img src="assets/icons/ice-cream.png" alt="">
-                <h3>Desserts</h3>
+                <img src="assets/icons/noodles.png" alt="">
+                <h3>Annachies Food Court</h3>
+            </a>
+            <a href="desserts.html" class="box">
+                <img src="assets/icons/desserts.png" alt="">
+                <h3>Dessert Bakery</h3>
             </a>
         </div>
     </section>
 
 </body>
-
 </html>
