--- a/main-dishes.html
+++ b/main-dishes.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/icons/delivery.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <title>Main Dishes</title>
+    <title>Foody🍔</title>
 </head>
 
 <body>
