--- a/category.html
+++ b/category.html
@@ -37,8 +37,12 @@
                 <img src="assets/icons/fast food.png" alt="">
                 <h3>Fast Food</h3>
             </a>
+            <a href="fast-food.html" class="box">
+                <img src="assets/icons/starters.png" alt="">
+                <h3>Starters</h3>
+            </a>
             <a href="main-dishes.html" class="box">
-                <img src="assets/icons/main dish.png" alt="">
+                <img src="assets/icons/roti.png" alt="">
                 <h3>Main Dishes</h3>
             </a>
             <a href="drinks.html" class="box">
