--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
                 <h3>Annachies Food Court</h3>
             </a>
             <a href="desserts.html" class="box">
+                <img src="assets/icons/peking-duck.png" alt="">
+                <h3>Ayaas</h3>
+            </a>
+            <a href="desserts.html" class="box">
+                <img src="assets/icons/vada.png" alt="">
+                <h3>Dhanam Mess</h3>
+            </a>
+            <a href="desserts.html" class="box">
+                <img src="assets/icons/masala-dosa.png" alt="">
+                <h3>Annam Mess</h3>
+            </a>
+            <a href="desserts.html" class="box">
                 <img src="assets/icons/desserts.png" alt="">
                 <h3>Dessert Bakery</h3>
             </a>
